packages/next-swc/crates/core/tests/errors/next-dynamic/no-arguments/input.js
import dynamic from 'neer/dynamic'

const DynamicComponent = dynamic()
